Fix gap between player and thumbnail list column

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 .navbar {
   overflow: hidden;
-  background-color: .fff;
+  background-color: #fff;
   position: fixed;
   top: 0;               /* Set the navbar to fixed position */
   width: 100%;          /* Position the navbar at the top of the page */
@@ -36,7 +36,7 @@
 
 .search-bar {
   border-radius: 2px;
-  border: 1px solid .d3d3d3;
+  border: 1px solid #d3d3d3;
   height: 26px;
   width: 550px;
   margin-right: 0;
@@ -44,9 +44,9 @@
 
 .search-btn {
   margin-left: -5px;
-  background-color: .f9f9f9;
+  background-color: #f9f9f9;
   border-radius: 2px;
-  border: 1px solid .d3d3d3;
+  border: 1px solid #d3d3d3;
   height: 30px;
   width: 65px;
   text-align: center;
@@ -60,14 +60,14 @@
 body {
   margin: 0;
   padding-top: 70px;
-  background-color: .f9f9f9;
+  background-color: #f9f9f9;
   font-family: roboto, sans-serif;
 }
 
 .player-col {
+  padding-right: 22px;
   float: left;
-  width: 70%;
-  text-align: center;
+  width: 700px;
   height: 100%;
 }
 
@@ -121,7 +121,6 @@ h6 {
   padding-top: 5px;
   float: left;
   text-align: left;
-  width: 60%;
 }
 
 .channel-sub-btn-col {
@@ -132,7 +131,6 @@ h6 {
 .row-video-description-box {
   margin-top: 20px;
   margin-left: 65px;
-  width: 700px;
   text-align: left;
 }
 
@@ -140,7 +138,7 @@ h6 {
   font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
-  color: .282828;
+  color: #282828;
 }
 
 .comment {
@@ -180,7 +178,7 @@ hr {
   width: 90%;
   height: 1px;
   color: grey;
-  background-color: .e0e0e0;
+  background-color: #e0e0e0;
   border: none;
 }
 
@@ -213,11 +211,11 @@ hr {
   margin-top: 5px;
   font-family: 'Fira Sans Extra Condensed', sans-serif;
   font-weight: bolder;
-  color: .282828;
+  color: #282828;
 }
 
 .row-description {
-  color: .707070;
+  color: #707070;
   height: 5px;
   text-align: left;
 }
@@ -244,12 +242,12 @@ hr {
 
 .subs-counter {
   font-size: 12px;
-  color: .606060;
+  color: #606060;
 }
 
 .subscribe-btn {
   text-transform: uppercase;
-  background-color: .c00;
+  background-color: #c00;
   color: white;
   border-radius: 2px;
   width: 110px;
@@ -279,7 +277,7 @@ hr {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
-  color: .bdbdbd;
+  color: #bdbdbd;
   margin-bottom: 10px;
 }
 
@@ -288,7 +286,7 @@ hr {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
-  color: .bdbdbd;
+  color: #bdbdbd;
 }
 
 .answer {
@@ -298,7 +296,7 @@ hr {
 .answer-text {
   font-weight: bold;
   font-size: 15px;
-  color: .0d0d0d;
+  color: #0d0d0d;
 }
 
 .menu-container {
@@ -353,7 +351,7 @@ hr {
 
 .sort-comment-btn {
   margin-left: 10px;
-  color: .5c5b59;
+  color: #5c5b59;
   font-size: 16px;
   font-weight: bold;
   background-color: Transparent;
@@ -381,9 +379,13 @@ hr {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: .ccc;
+  background-color: #ccc;
   -webkit-transition: 0.4s;
   transition: 0.4s;
+}
+
+iframe {
+  border: 0;
 }
 
 .slider::before {
@@ -399,11 +401,11 @@ hr {
 }
 
 .switch-btn:checked + .slider {
-  background-color: .2196f3;
+  background-color: #2196f3;
 }
 
 .switch-btn:focus + .slider {
-  box-shadow: 0 0 1px .2196f3;
+  box-shadow: 0 0 1px #2196f3;
 }
 
 .switch-btn:checked + .slider::before {
